# particle_swarm_optimisation

./: .gitignore  main.py  objective_function.py  particle.py  pso.py  pyproject.toml  readme.md  visualisation.py
src/: objective_function.py  pso.py  visualisation.py
