[tool.poetry]
name = "particle-swarm-opt"
version = "0.1.0"
description = ""
authors = ["Leonardo de Figueiredo <38779415+leothesouthafrican@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
